# stook

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  justfile  plan.md
.github/workflows/: build.yml
src/: discovery.rs  forwarder.rs  lib.rs  main.rs  redeployer.rs  registry.rs  routes.rs
tests/: webhook.rs
